sprint 21 - выводится список городов и станций, запускается запрос на список перевозчиков. Необходимо обеспечить обновление массива перевозчиков после получения данных - на данный момент запрос пустой, хотя данные в итоге приходят
